# credit-default-predictor

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/routers/: experiments.py  prediction.py
backend/app/schemas/: experiment.py  prediction.py
backend/app/services/: mlflow_service.py  model_service.py
backend/app/tests/: test_prediction.py
frontend/: dockerfile  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/eda/: page.tsx
frontend/app/experiments/: page.tsx
frontend/app/predict/: page.tsx
frontend/components/: PageHeader.tsx  RiskBadge.tsx  Sidebar.tsx  StatCard.tsx
frontend/lib/: api.ts
mlflow/: Dockerfile
model/: DeepMLP_weights.pt  README.md  clip_bounds.pkl  feature_names.pkl  model_info.json  scaler.pkl
model/artifacts/: all_features.pkl  outlier_bounds.pkl  preprocessing_meta.json  robust_scaler.pkl  selected_features.pkl
model/models/: full_leaderboard.csv
model/models/dl/: BEST_MODEL_SimpleMLP.pt  ComplexMLP_tuned.pt  SimpleMLP_baseline.pt  SimpleMLP_tuned.pt  best_dl_summary.json  dl_summary.json
model/models/ml/: BEST_F1_LightGBM.pkl  CatBoost_tuned.pkl  LightGBM_tuned.pkl  LogisticRegression_tuned.pkl  XGBoost_tuned.pkl  best_f1_summary.json  ml_leaderboard.csv  ml_summary.json
model/notebooks/: 02_ml_models_hyperparameter_tuning.ipynb  03_deep_learning_hyperparameter_tuning.ipynb  credit_card.ipynb  credit_card_EDA.ipynb  credit_card_final-2.ipynb
